<resources>
    <string name="app_name">BaseDeDatos</string>
    <string name="txt_codigo">Codigo del producto</string>
    <string name="txt_descripcion">Descripcion</string>
    <string name="txt_precio">Precio del producto</string>
    <string name="BotonRegistrar">Registrar Producto</string>
    <string name="BotonBuscar">Buscar Productos</string>
    <string name="BotonEliminar">Eliminar Productos</string>
    <string name="BotonModificar">Modificar Productos</string>
</resources>